[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/background/MenuBg.png" type="Texture" id=1]
[ext_resource path="res://scenes/dick/dickMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/brush.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/mainMenu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://themes/arcade_theme.tres" type="Theme" id=5]

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 639, 361 )
scale = Vector2( 0.676678, 0.676678 )
texture = ExtResource( 1 )

[node name="Label1" type="Label" parent="."]
margin_left = 158.0
margin_top = 109.0
margin_right = 660.0
margin_bottom = 360.0
rect_scale = Vector2( 0.655833, 0.655833 )
custom_colors/font_color = Color( 0.815686, 0.14902, 0.14902, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = -171
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 3 )
text = "Attenti!
"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 74.0
margin_top = 131.0
margin_right = 523.0
margin_bottom = 382.0
custom_colors/font_color = Color( 0.607843, 0.815686, 0.14902, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = -171
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 3 )
text = "Cazzi
"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 282.0
margin_top = 198.0
margin_right = 1039.0
margin_bottom = 449.0
custom_colors/font_color = Color( 0.607843, 0.815686, 0.14902, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = -171
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 3 )
text = "Avvelenati
"
align = 1
valign = 1

[node name="Dick" parent="." instance=ExtResource( 2 )]
position = Vector2( 1122, 148 )

[node name="Dick2" parent="." instance=ExtResource( 2 )]
position = Vector2( 203, 566 )
rotation = -2.83687
angular_velocity = -2.0

[node name="StartButton" type="Button" parent="."]
margin_left = 912.0
margin_top = 444.0
margin_right = 1039.0
margin_bottom = 500.0
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color_focus = Color( 0.054902, 0.219608, 0.054902, 1 )
custom_colors/font_color = Color( 0.00392157, 0.443137, 0, 1 )
custom_colors/font_color_hover = Color( 0.054902, 0.219608, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.380392, 0, 1 )
enabled_focus_mode = 0
text = "Inizia"
flat = true

[node name="InstructionsButton" type="Button" parent="."]
margin_left = 858.0
margin_top = 531.0
margin_right = 1095.0
margin_bottom = 587.0
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color_focus = Color( 0.054902, 0.219608, 0.054902, 1 )
custom_colors/font_color = Color( 0.00392157, 0.443137, 0, 1 )
custom_colors/font_color_hover = Color( 0.054902, 0.219608, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.380392, 0, 1 )
enabled_focus_mode = 0
text = "Instruzioni"
flat = true

[node name="ExitButton" type="Button" parent="."]
margin_left = 920.0
margin_top = 614.0
margin_right = 1034.0
margin_bottom = 670.0
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color_focus = Color( 0.219608, 0.054902, 0.054902, 1 )
custom_colors/font_color = Color( 0.443137, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.219608, 0.054902, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 0, 0, 1 )
enabled_focus_mode = 0
text = "Esci"
flat = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
